--- a/Dockerfile.cuda-arm
+++ b/Dockerfile.cuda-arm
@@ -1,16 +1,15 @@
 # Source: https://github.com/LambdaLabsML/vllm-builder
-ARG CUDA_VERSION=12.6.3
-ARG IMAGE_DISTRO=ubuntu24.04
+ARG CUDA_VERSION=12.4.1
+ARG IMAGE_DISTRO=ubuntu22.04
 ARG PYTHON_VERSION=3.12
 
 # ---------- Builder Base ----------
 FROM nvcr.io/nvidia/cuda:${CUDA_VERSION}-devel-${IMAGE_DISTRO} AS base
 
-# Set arch lists for all targets using upstream values
-ARG torch_cuda_arch_list='7.0 7.5 8.0 8.6 8.9 9.0+PTX'
-ENV TORCH_CUDA_ARCH_LIST=${torch_cuda_arch_list}
-ARG vllm_fa_cmake_gpu_arches='80-real;90-real'
-ENV VLLM_FA_CMAKE_GPU_ARCHES=${vllm_fa_cmake_gpu_arches}
+ARG TORCH_CUDA_ARCH_LIST="9.0a"
+ENV TORCH_CUDA_ARCH_LIST=${TORCH_CUDA_ARCH_LIST}
+ARG VLLM_FA_CMAKE_GPU_ARCHES="90a-real"
+ENV VLLM_FA_CMAKE_GPU_ARCHES=${VLLM_FA_CMAKE_GPU_ARCHES}
 ENV UV_HTTP_TIMEOUT=500
 
 # Update apt packages and install dependencies
@@ -86,14 +85,14 @@ ARG FLASHINFER_REF=v0.2.2.post1
 ARG FLASHINFER_BUILD_SUFFIX=cu126
 ENV FLASHINFER_LOCAL_VERSION=${FLASHINFER_BUILD_SUFFIX:-}
 # Flashinfer only supports sm75+, removing 7.0 from arch list
-ENV TORCH_CUDA_ARCH_LIST='7.5 8.0 8.6 8.9 9.0+PTX'
+# ENV TORCH_CUDA_ARCH_LIST='7.5 8.0 8.6 8.9 9.0+PTX'
 RUN git clone https://github.com/flashinfer-ai/flashinfer.git
 RUN cd flashinfer && \
     git checkout ${FLASHINFER_REF} && \
     git submodule sync && \
     git submodule update --init --recursive -j 8 && \
     NVCC_THREADS=2 \
-    MAX_JOBS=16 \
+    MAX_JOBS=32 \
     uv build --wheel --no-build-isolation -o /wheels
 # Restore original CUDA arch list for subsequent stages
 ENV TORCH_CUDA_ARCH_LIST=${torch_cuda_arch_list}
@@ -106,10 +105,8 @@ RUN cd vllm && \
     git submodule sync && \
     git submodule update --init --recursive -j 8 && \
     uv pip install -r requirements/build.txt && \
-    # Disable problematic Flash Attention components for ARM64
-    FLASH_ATTENTION_SKIP_CUDA_BUILD=1 \
     NVCC_THREADS=2 \
-    MAX_JOBS=16 \
+    MAX_JOBS=32 \
     uv build --wheel --no-build-isolation -o /wheels
 
 FROM base AS vllm-openai
@@ -120,7 +117,7 @@ COPY --from=build-xformers /wheels/* wheels/
 
 # Install triton using upstream wheel
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv pip install --system --index-url https://download.pytorch.org/whl/nightly/cu128 --pre pytorch_triton==3.3.0+gitab727c40;
+    uv pip install --index-url https://download.pytorch.org/whl/nightly/cu128 --pre pytorch_triton==3.3.0+gitab727c40;
 
 # Install and cleanup wheels
 RUN --mount=type=cache,target=/root/.cache/uv \
@@ -133,7 +130,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 
 # Add additional packages for vLLM OpenAI
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv pip install accelerate hf_transfer 'modelscope!=1.15.0' 'bitsandbytes>=0.45.3' 'timm==0.9.10' boto3 runai-model-streamer runai-model-streamer[s3] tensorizer
+    uv pip install accelerate hf_transfer 'modelscope!=1.15.0' 'timm==0.9.10' bitsandbytes boto3 runai-model-streamer runai-model-streamer[s3] tensorizer
 
 # Clean uv cache
 RUN uv clean
